<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTeal"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/myChart"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/back" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_round"
        android:bottomLeftRadius="100dp"
        android:bottomRightRadius="100dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:radius="11dp"
        android:topLeftRadius="100dp"
        android:topRightRadius="100dp">

        <RadioGroup
            android:id="@+id/radioGroup_data"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">

            <RadioButton
                android:id="@+id/radioButton_AllData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radiobuttonAllData" />

            <RadioButton
                android:id="@+id/radioButton_ugm3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radiobutton_ugm3" />

            <RadioButton
                android:id="@+id/radioButton_ugm3_aed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radiobutton_ugm3_aed" />

            <RadioButton
                android:id="@+id/radioButton_umL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radiobutton_umL" />
        </RadioGroup>

        <ListView
            android:id="@+id/listView_discoveredDevices"
            android:layout_width="225dp"
            android:layout_height="match_parent"
            android:background="@drawable/shape_round" />

        <EditText
            android:id="@+id/editText_rawData"
            android:layout_width="225dp"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@drawable/shape_round"
            android:ems="10"
            android:focusable="false"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="update_onClick"
                android:text="@string/update" />

            <Button
                android:id="@+id/button_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="search_onClick"
                android:text="@string/search" />

            <Button
                android:id="@+id/button_discover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="discover_onClick"
                android:text="@string/discover" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cancelReadBtData_onClick"
                android:text="@string/cancel" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>